ARROW-10426: [C++] Allow writing large strings to Parquet

Large strings are still read back as regular strings.